Added social networks in the team

--- a/index.html
+++ b/index.html
@@ -99,6 +99,37 @@
                         <div class="card-team">
                             <h3 class="employee-name">Игорь Демьяненко</h3>
                             <p class="job-title" lang="en">Product Designer</p>
+                            
+                           <ul class="social-list list">
+                            <li class="item-social">
+                                <a href="https://www.instagram.com/" class="social-link">
+                                    <svg class="social-icon" width="20" height="20" >
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-social">
+                                <a href="https://twitter.com/?lang=uk" class="social-link">
+                                    <svg class="social-icon" width="20" height="20" >
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-social">
+                                <a href="https://uk-ua.facebook.com/" class="social-link">
+                                    <svg class="social-icon" width="20" height="20" >
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-social">
+                                <a href="https://www.linkedin.com/" class="social-link">
+                                    <svg class="social-icon" width="20" height="20" >
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                           </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -106,6 +137,36 @@
                         <div class="card-team">
                             <h3 class="employee-name">Ольга Репина</h3>
                             <p class="job-title" lang="en">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="item-social">
+                                    <a href="https://www.instagram.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://twitter.com/?lang=uk" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://uk-ua.facebook.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://www.linkedin.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -113,6 +174,36 @@
                         <div class="card-team">
                             <h3 class="employee-name">Николай Тарасов</h3>
                             <p class="job-title" lang="en">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="item-social">
+                                    <a href="https://www.instagram.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://twitter.com/?lang=uk" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://uk-ua.facebook.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://www.linkedin.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -120,6 +211,36 @@
                         <div class="card-team">
                             <h3 class="employee-name">Михаил Ермаков</h3>
                             <p class="job-title" lang="en">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="item-social">
+                                    <a href="https://www.instagram.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://twitter.com/?lang=uk" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://uk-ua.facebook.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-social">
+                                    <a href="https://www.linkedin.com/" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
