--- a/portfolio.html
+++ b/portfolio.html
@@ -128,26 +128,63 @@
 
     <!-- FOOTER -->
     <footer class="footer-container">
-        <div class="container">
-            <div class="address-item">
-                <a class="logo link" href="" lang="en">Web<span class="logo-second">Studio</span></a>
+        <div class="container footer-info">
+            <div>
+                <div class="address-item">
+                    <a class="logo link" href="" lang="en">Web<span class="logo-second">Studio</span></a>
+                </div>
+                <address>
+                    <ul class="list address-list">
+                        <li>
+                            <a class="address link" href="https://goo.gl/maps/vD46rgRYoQ4FNNTK7" target="_blank"
+                                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26
+                            </a>
+                        </li>
+                        <li>
+                            <a class="contact-footer link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li>
+                            <a class="contact-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
             </div>
-            <address>
-                <ul class="list address-list">
-                    <li>
-                        <a class="address link" href="https://goo.gl/maps/vD46rgRYoQ4FNNTK7" target="_blank"
-                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26
+            <div class="join-in-item">
+                <strong class="join-in">присоединяйтесь</strong>
+                <ul class="social-list list">
+                    <li class="item-social">
+                        <a href="https://www.instagram.com/" class="social-link-footer">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a class="contact-footer link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="item-social">
+                        <a href="https://twitter.com/?lang=uk" class="social-link-footer">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a class="contact-footer link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="item-social">
+                        <a href="https://uk-ua.facebook.com/" class="social-link-footer">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-social">
+                        <a href="https://www.linkedin.com/" class="social-link-footer">
+                            <svg class="social-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
+    
+    
     </footer>
     </body>
     </html>
