--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
     
                 <ul class="list contact">
                     <li>
-                        <a class="link" href="mailto:info@devstudio.com"> <svg width="16px" heigt="12px"> <use href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+                        <a class="link contact-link" href="mailto:info@devstudio.com">
+                            <svg width="16px" ; height="12px" class="contact-icon"> <use href="./images/sprite.svg#icon-envelope" ></use></svg>
+                            info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="link link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="link link-tel contact-link" href="tel:+380961111111">
+                            <svg width="10px" ; height="16px" class="contact-icon">
+                                <use href="./images/sprite.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -53,30 +59,38 @@
                 <h2 hidden>Наши преимущества</h2>
                 <ul class="list benefits-list">
                     <li class="item">
-                        <svg class="benefits-icon" width="70px"; height="70px";>
-                            <use href="./images/sprite.svg#icon-antenna"></use>
-                        </svg>
+                        <div class="benefits-item">
+                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                                <use href="./images/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-benefits">Внимание к деталям</h3>
                         <p class="benefits">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="item">
-                        <svg class="benefits-icon" width="70px" ; height="70px" ;>
-                            <use href="./images/sprite.svg#icon-clock"></use>
-                        </svg>
+                        <div class="benefits-item">
+                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                                <use href="./images/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-benefits">Пунктуальность</h3>
                         <p class="benefits">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="item">
-                        <svg class="benefits-icon" width="70px" ; height="70px" ;>
-                            <use href="./images/sprite.svg#icon-diagram"></use>
-                        </svg>
+                        <div class="benefits-item">
+                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                                <use href="./images/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-benefits">Планирование</h3>
                         <p class="benefits">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="item">
-                        <svg class="benefits-icon" width="70px" ; height="70px" ;>
-                            <use href="./images/sprite.svg#icon-astronaut"></use>
-                        </svg>
+                        <div class="benefits-item">
+                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                                <use href="./images/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="main-benefits">Современные технологии</h3>
                         <p class="benefits">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -258,7 +272,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section customers-list">
             <div>
                 <h2 class="customers">Постоянные клиенты</h2>
                 <ul class="list our-customers">
