--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <ul class="list contact">
                     <li>
                         <a class="link contact-link" href="mailto:info@devstudio.com">
-                            <svg width="16px" ; height="12px" class="contact-icon"> <use href="./images/sprite.svg#icon-envelope" ></use></svg>
+                            <svg width="16px" height="12px" class="contact-icon"> <use href="./images/sprite.svg#icon-envelope" ></use></svg>
                             info@devstudio.com</a>
                     </li>
                     <li>
                         <a class="link link-tel contact-link" href="tel:+380961111111">
-                            <svg width="10px" ; height="16px" class="contact-icon">
+                            <svg width="10px" height="16px" class="contact-icon">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                             </svg>
                             +38 096 111 11 11</a>
@@ -60,7 +60,7 @@
                 <ul class="list benefits-list">
                     <li class="item">
                         <div class="benefits-item">
-                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                            <svg class="benefits-icon" width="70px"  height="70px">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -69,7 +69,7 @@
                     </li>
                     <li class="item">
                         <div class="benefits-item">
-                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                            <svg class="benefits-icon" width="70px"  height="70px" >
                                 <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="item">
                         <div class="benefits-item">
-                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                            <svg class="benefits-icon" width="70px"  height="70px" >
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -87,7 +87,7 @@
                     </li>
                     <li class="item">
                         <div class="benefits-item">
-                            <svg class="benefits-icon" width="70px" ; height="70px" ;>
+                            <svg class="benefits-icon" width="70px"  height="70px" >
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -323,7 +323,7 @@
                             </svg>
                         </a>
                         
-                    </li class="item">
+                    </li>
                 </ul>
 
 
