--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,14 @@
                 <ul class="list contact">
                     <li>
                         <a class="link contact-link" href="mailto:info@devstudio.com">
-                            <svg width="16px" ; height="12px" class="contact-icon">
+                            <svg width="16px"  height="12px" class="contact-icon">
                                 <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
                             info@devstudio.com</a>
                     </li>
                     <li>
                         <a class="link link-tel contact-link" href="tel:+380961111111">
-                            <svg width="10px" ; height="16px" class="contact-icon">
+                            <svg width="10px"  height="16px" class="contact-icon">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                             </svg>
                             +38 096 111 11 11</a>
